# snaptui

./: .gitignore  README.md  pyproject.toml
examples/: hello.py
pytea/: __init__.py  layout.py  model.py  program.py  renderer.py  strutil.py  style.py  terminal.py  theme.py
pytea/components/: confirm.py  form.py  list.py  select.py  textinput.py  viewport.py
snaptui/: __init__.py  keys.py  model.py  program.py  renderer.py  strutil.py  style.py  terminal.py  theme.py
snaptui/components/: __init__.py  form.py  help.py  progress.py  spinner.py  table.py  textarea.py  textinput.py
tests/: test_help.py  test_keys.py  test_layout.py  test_list.py  test_mouse.py  test_progress.py  test_spinner.py  test_strutil.py  test_style.py  test_table.py
