[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snaptui"
version = "0.2.1"
description = "Minimal Python Charm stack — raw terminal TUI framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/andrew-roci/snaptui"
Repository = "https://github.com/andrew-roci/snaptui"

[tool.setuptools.packages.find]
include = ["snaptui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
